--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: coral;
+    background-color: rose; 
     color: brown;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -8,16 +8,36 @@ body{
 
     line-height: 1.6em;
     margin: 0; 
+    text-align: center;
+    padding-top: 20px; 
 }
+
+.clr{
+    clear: both;
+}
+
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
 
 .box-1{
     background-color: coral;
-    
+
 }
 
 .container{
     width: 500px; 
+    text-align: left;
+    margin-left: normal; 
+    margin: auto; 
+    padding-top: 15px;
+
 }
+
 .box-1{
     background-color: brown;
     color: white;
@@ -34,4 +54,7 @@ body{
 .block{
     float:left;
     width: 33.3%;
+    border: 1px solid brown;
+    padding: 10px;
+    box-sizing: border-box; 
 }
