--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@ body{
     text-align: center;
     padding-top: 20px; 
 }
+ .about_me{
+    text-align: center;
+}
+.img{
+    text-align: center;
+}
 
+img {
+    border-radius: 40%;
+  }
 .clr{
     clear: both;
 }
